[package]
name = "ukk"
version = "0.1.0"
authors = ["Youtao Lu <luyoutao@sas.upenn.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
regex = "1.3"
log = "0.4"
env_logger = "0.7"
chrono = "0.4"
flate2 = "1.0"